--- a/dental-web-app-fronten/src/components/Card/Card.css
+++ b/dental-web-app-fronten/src/components/Card/Card.css
@@ -1,4 +1,4 @@
-/*img{
+img{
     width :150px;
     height: 150px;
     margin: 10%;
@@ -14,5 +14,5 @@
 }
 p{
     text-align: center;
-    color: cornsilk;
-}*/
+    color: #141004;
+}
