--- a/dental-web-app-frontend/src/views/adminPanel/adminPanel.css
+++ b/dental-web-app-frontend/src/views/adminPanel/adminPanel.css
@@ -1,10 +1,17 @@
 .admin-home{
+
     margin: 6% 6% 0 16%;
+
     width: 85%;
+
 }
+
 .heading{
+
     color: royalblue;
+
     text-align: center;
+
     font-size: 2rem;
-    margin: 1%;
-}
+
+    margin: 1%;}
