--- a/dental-web-app-frontend/src/views/DoctorList/DoctorList.css
+++ b/dental-web-app-frontend/src/views/DoctorList/DoctorList.css
@@ -13,14 +13,19 @@ table {
     font-size: 3em;
   }
 
-  #AddDoctorheader{
-    padding: 0.2em 0.5em 0.5em 0.5em;
+  #doctorListHeading{
+    padding: 0.2em 0.5em 0 0.5em;
     font-weight: 700;
     font-size: 2em;
+  }
+  #searchBar{
+    float: left;
+  clear: both;
   }
 
   fieldset{
     margin: 0 1.5em 0 1.5em;
+    text-align: center
   }
 
   .lable{
@@ -31,29 +36,17 @@ table {
   }
 
   td{
-    padding: 0.5em 0 0.5em 4em;
+    padding: 0.5em 0 0.5em 0;
   }
 
   input[type=text]{
     width: 25em;
     height: 2.5em;
     background-color: rgb(223, 223, 223);
-    
   }
 
-  #doctorListBtn{
-    margin: 2.5em 0 2em 1em;
-    padding: 0.6em 1em 0.6em 1em;
-    background-color: rgb(250, 190, 51);
-    border-style: none;
-    border-radius: 10px;
-    color: white;
-    font-size: 18px;
-    font-weight: 400;
-  }
-
-  #AddDoctorSubmitBtn{
-    margin: 2.5em 1em 2em 0;
+  input[type=submit]{
+    margin: 2.5em 0 8em 0;
     padding: 0.6em 1em 0.6em 1em;
     background-color: rgb(34, 146, 221);
     border-style: none;
@@ -61,25 +54,24 @@ table {
     color: white;
     font-size: 18px;
     font-weight: 400;
-    z-index: -1;
   }
 
-  #GenderSelect{
-    width: 25em;
-    height: 2.5em;
-    font-size: 13.6px;
-    background-color: rgb(223, 223, 223);
+  #profilePic{
+    width: 270px;
+    height: 300px;
   }
- option{
-     font-size: 12.5px;
- }
+  #Pic{
+    width: 30%;
+  }
+  .container-child{
+    width: 50%;
+    float: left;
+
+  }
+
   footer{
     bottom: 0;
     position: absolute;
     width: 100%;
     height: 100px;
-  }
-
-  .docSub{
-    z-index: 1;
   }
