--- a/dental-web-app-frontend/src/views/adminPanel/adminPanel.css
+++ b/dental-web-app-frontend/src/views/adminPanel/adminPanel.css
@@ -15,3 +15,10 @@
     font-size: 2rem;
 
     margin: 1%;}
+
+    footer{
+        bottom: 0;
+        position: absolute;
+        width: 100%;
+        height: 100px;
+      }
